# MicroprocessorsProjectSTM32-

./: Cargo.toml  README.md
Projekt/: .cproject  .mxproject  .project  Projekt Debug.launch  Projekt.ioc
Projekt/Core/Inc/: command_handler.h  cpp_bridge.h  error_codes.h  stm32f4xx_hal_conf.h
Projekt/Core/Src/: command_handler.cpp  commands.cpp  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usart_rx_handler.cpp  usart_tx_handler.cpp
proto/: Cargo.toml
proto/src/: encoding.rs  lib.rs
proto_cpp/include/: bytes.h  circular_buffer.h  frame.h  static_vec.h
proto_cpp/src/: frame.cpp
proto_cross_test/: Cargo.toml  build.rs
proto_cross_test/bindings/: frame.cpp
proto_cross_test/src/: lib.rs
terminal/: Cargo.toml
terminal/src/: main.rs  serial_com.rs
