[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arboard = { version = "3.3.0" }
crossbeam-channel = "0.5.8"
display_bytes = "0.2.1"
eframe = "0.25.0"
egui-toast = "0.10.2"
egui_number_buffer = { version = "0.1.0", path = "../../egui_number_buffer" }
env_logger = "0.10.1"
log = "0.4.20"
proto = { version = "0.1.0", path = "../proto" }
tokio = { version = "1.34.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = "0.7.10"
